# looptab

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
datasets/: emotions.npz  etth1.npz  scene.npz  yeast.npz
docs/: REFERENCES.md  results-narrative.html
experiments/: screen_nested_converge.py
results/: LOG.md  m0_parity_sweep_20260620T012344_curve.csv  m0_smoke_linear_20260620T011839_curve.csv  m10_decoupled_converge_20260622T092240_curve.csv  m10_decoupled_converge_20260622T092240_deltas.csv  m10_decoupled_converge_20260622T092240_params.csv  m11_size_base_20260623T022519_curve.csv  m11_size_base_20260623T022519_deltas.csv  m11_size_base_20260623T022519_params.csv  m11_size_large_20260623T073806_curve.csv  m11_size_large_20260623T073806_deltas.csv  m11_size_large_20260623T073806_params.csv  m11_size_small_20260623T032750_curve.csv  m11_size_small_20260623T032750_deltas.csv  m11_size_small_20260623T032750_params.csv  m12_hardconv_orbit_20260623T151943_curve.csv  m12_hardconv_orbit_20260623T151943_deltas.csv  m12_hardconv_orbit_20260623T151943_params.csv  m13_hopfield_converge_20260623T183516_curve.csv  m13_hopfield_converge_20260623T183516_deltas.csv  m13_hopfield_large_20260623T202439_curve.csv  m13_hopfield_large_20260623T202439_deltas.csv  m13_hopfield_large_20260623T202439_params.csv  m13_hopfield_screen_20260623T175420_curve.csv  m13_hopfield_screen_20260623T175420_deltas.csv  m13_hopfield_screen_20260623T175420_params.csv  m14_dense_anchor_20260623T223421_curve.csv  m14_dense_anchor_20260623T223421_deltas.csv  m14_dense_anchor_20260623T223421_params.csv  (+367 more)
(+227 files in other folders)
