[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looptab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2,<2.3",
    "numpy>=1.26,<2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
plot = ["matplotlib"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
